--- a/Random-Forest-and-XG-Boost-Classifier-Model.ipynb
+++ b/Random-Forest-and-XG-Boost-Classifier-Model.ipynb
@@ -106,7 +106,7 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix, f1_score, roc_auc_score, roc_curve\n",
     "\n",
     "# Load dataset\n",
-    "df = pd.read_csv('/Users/vaishakhmenon/Downloads/IIMK_DSAI_W14_Graded Assignment 14.1_Data Set - credit_card_defaulter.csv')\n",
+    "df = pd.read_csv('./credit_card_defaulter.csv')\n",
     "\n",
     "# Display rows\n",
     "df.head()\n"
